# engine

./: .clangd  .gitignore  CMakeLists.txt  Engine  README.md  Renderer  compile.bash
.cache/clangd/index/: config.hpp.2D81C078FA4054BE.idx  config.hpp.A191E146025B935E.idx  glad.c.13250B0CCFD191C4.idx  glad.c.563FB68430AAFD40.idx  glad.h.4D2ABF955AF8A5A7.idx  glad.h.87FFC52236749E48.idx  khrplatform.h.6863CC296FC88972.idx  khrplatform.h.9B035A81561B572A.idx  main.cpp.A46B066BD4EF7BD2.idx  main.cpp.B883824689974E64.idx  stb_image.h.4B431A3148983D35.idx  stb_image.h.8CDBAC58E5A671F2.idx  types.hpp.28CE812E70E8669B.idx  types.hpp.87CE45BB5D195978.idx  ufbx.c.6E1900A30D9C2A95.idx  ufbx.c.93AA4D4FED2A62FE.idx  ufbx.h.86475F8CF6C1F86F.idx  ufbx.h.D271531816D6073E.idx  utilities.cpp.3FA383376F2744EA.idx  utilities.cpp.FB13DD1FC3AC1C68.idx  utilities.hpp.5CBB3A297038C3EF.idx  utilities.hpp.BF8B2D5781F404C9.idx
include/: config.hpp  types.hpp  utilities.hpp
include/glad/: glad.h
include/shaders/: fragmentShader.frag  vertexShader.vert
res/meshes/: cube.fbx  icosphere.fbx
src/: glad.c  main.cpp  ufbx.c  utilities.cpp
